nginx/eks_auto/ingress_class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: eks-auto
spec:
  controller: eks.amazonaws.com/alb
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    name: eks-auto-alb
